--- a/dev/styles/home.css
+++ b/dev/styles/home.css
@@ -10,14 +10,23 @@
 }
 
 .hero h1 {
-  font-size: 3rem;
+  font-size: 70px;
   margin-bottom: 1rem;
+  font-family: 'Crimson Text', serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .hero p {
   max-width: 600px;
-  font-size: 1.2rem;
-  color: #666;
+  font-size: 40px;
+  color: #3f3f3f;
+  font-family: 'Crimson Text', serif;
+  font-weight: 400;
+  font-style: normal;
+  background-color: #fffafa58;
+  border-radius: 8px;
+  box-shadow: 0px 0px 12px 16px #fffafa58;
 }
 
 /* Home Sections */
