--- a/dev/styles/home.css
+++ b/dev/styles/home.css
@@ -7,25 +7,23 @@
   text-align: center;
   padding: 4rem;
   background: url('../assets/img/home_background.jpg') no-repeat center center / cover;
+
+  color: #f1e3c9;
+  font-weight: bolder;
 }
 
 .hero h1 {
   font-size: 70px;
   margin-bottom: 1rem;
   font-family: 'Zalando Sans Expanded', sans-serif;
-  font-weight: 400;
   font-style: normal;
-  color: #c5ae78;
 }
 
 .hero p {
   max-width: 600px;
   font-size: 40px;
-  color: #3f3f3f;
   font-family: 'Zalando Sans Expanded', serif;
-  font-weight: 400;
   font-style: normal;
-  color: #c5ae78;
 
   /* Backdrop */
   /* background-color: #fffafa58;
