--- a/dev/styles/home.css
+++ b/dev/styles/home.css
@@ -8,13 +8,14 @@
   padding: 4rem;
   background: url('../assets/img/home_background.jpg') no-repeat center center / cover;
 
-  color: #f1e3c9;
-  font-weight: bolder;
+  color: #e4cc9d;
+  font-weight: 200;
 }
 
 .hero h1 {
-  font-size: 70px;
+  font-size: 80px;
   margin-bottom: 1rem;
+  letter-spacing: 8px;
   font-family: 'Zalando Sans Expanded', sans-serif;
   font-style: normal;
 }
@@ -24,12 +25,14 @@
   font-size: 40px;
   font-family: 'Zalando Sans Expanded', serif;
   font-style: normal;
+  margin: 0px auto;
 
   /* Backdrop */
   /* background-color: #fffafa58;
   border-radius: 8px;
   box-shadow: 0px 0px 12px 16px #fffafa58; */
 }
+#smaller { font-size: 30px; }
 
 /* Home Sections */
 .home-section {
